--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ header {
 }
 
 body {
-    font-family: 'Lato';
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* background: url("assets/images/hab1.png"); */
     background-repeat: no-repeat; 
     background-size: 100%;
@@ -29,7 +29,7 @@ h4,
 h5,
 h6 {
     font-weight: 700;
-    font-family: 'Montserrat';
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
